basic ui changes

--- a/about_form.html
+++ b/about_form.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SmartBin - Request Form</title>
     <link rel="stylesheet" href="about_form.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <nav><img src="smartbinrednobg.png" class="logo" /></nav>
+
     <div class="form-container">
       <h1>Request Smart Bins & Pricing Catalog</h1>
       <form action="#">
@@ -54,7 +65,11 @@
           <p>Select a subscription type to view the pricing details:</p>
 
           <!-- Corporate Pricing -->
-          <div id="corporatePricing" class="pricing-details" style="display: none;">
+          <div
+            id="corporatePricing"
+            class="pricing-details"
+            style="display: none"
+          >
             <h4>Corporate Pricing:</h4>
             <ul>
               <li>Basic Package (up to 10 bins): 100rs/month</li>
@@ -64,7 +79,11 @@
           </div>
 
           <!-- Personal Pricing -->
-          <div id="personalPricing" class="pricing-details" style="display: none;">
+          <div
+            id="personalPricing"
+            class="pricing-details"
+            style="display: none"
+          >
             <h4>Personal Pricing:</h4>
             <ul>
               <li>Basic Package (1 bin): 15rs/month</li>
