--- a/user.html
+++ b/user.html
@@ -135,10 +135,10 @@
             />
           </div>
           <div class="work">
-            <img src="" alt="coming soon" style="background-color: gray" />
+            <img src="tietpic.png" alt="coming soon" style="background-color: gray" />
           </div>
           <div class="work">
-            <img src="" alt="coming soon" style="background-color: gray" />
+            <img src="Bblock.jpg" alt="coming soon" style="background-color: gray" />
           </div>
         </div>
       </div>
