--- a/about_form.html
+++ b/about_form.html
@@ -4,72 +4,204 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SmartBin - Request Form</title>
-    <link rel="stylesheet" href="about_form.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Poppins', sans-serif;
+      }
+
+      body {
+        background: #000;
+        color: #333;
+      }
+
+      nav {
+        background: #000;
+        padding: 20px 10%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+
+      .logo {
+        width: 60px;
+        height: auto;
+      }
+
+      nav ul {
+        display: flex;
+        gap: 40px;
+        list-style: none;
+        margin-left: auto;
+      }
+
+      nav ul li a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: 500;
+      }
+
+      .form-container {
+        background: #fff;
+        border-radius: 20px;
+        padding: 40px;
+        margin: 20px auto;
+        max-width: 800px;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      }
+
+      h1 {
+        color: #F44336;
+        font-size: 28px;
+        margin-bottom: 30px;
+      }
+
+      form {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+      }
+
+      label {
+        font-weight: 500;
+        color: #333;
+        margin-bottom: 5px;
+      }
+
+      input, select {
+        width: 100%;
+        padding: 12px;
+        border: 1px solid #e0e0e0;
+        border-radius: 8px;
+        background: #f5f5f5;
+        font-size: 16px;
+      }
+
+      input:focus, select:focus {
+        outline: none;
+        border-color: #F44336;
+      }
+
+      .pricing-info {
+        margin-top: 20px;
+      }
+
+      .pricing-info h3 {
+        color: #F44336;
+        margin-bottom: 10px;
+      }
+
+      .pricing-details {
+        background: #f5f5f5;
+        padding: 20px;
+        border-radius: 8px;
+        margin-top: 10px;
+      }
+
+      .pricing-details ul {
+        list-style: none;
+        padding: 0;
+      }
+
+      .pricing-details li {
+        margin: 10px 0;
+      }
+
+      input[type="submit"] {
+        background: #F44336;
+        color: white;
+        border: none;
+        padding: 15px;
+        border-radius: 8px;
+        cursor: pointer;
+        font-weight: 500;
+        transition: background 0.3s;
+      }
+
+      input[type="submit"]:hover {
+        background: #d32f2f;
+      }
+
+      @media (max-width: 768px) {
+        nav ul {
+          display: none;
+        }
+        
+        .form-container {
+          margin: 20px;
+          padding: 20px;
+        }
+      }
+    </style>
   </head>
   <body>
-    <nav><img src="smartbinrednobg.png" class="logo" /></nav>
+    <nav>
+      <img src="smartbinrednobg.png" alt="SmartBin Logo" class="logo" />
+      <ul>
+        <li><a href="user.html">Home</a></li>
+        <li><a href="about_form.html">Product & Services</a></li>
+        <li><a href="worker-tasks.html">Worker Login</a></li>
+        <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
+      </ul>
+    </nav>
 
     <div class="form-container">
       <h1>Request Smart Bins & Pricing Catalog</h1>
       <form action="#">
-        <!-- Organisation Name -->
-        <label for="orgName">Name of the Organisation</label>
-        <input
-          type="text"
-          id="orgName"
-          name="orgName"
-          placeholder="Enter organisation name"
-          required
-        />
+        <div>
+          <label for="orgName">Name of the Organisation</label>
+          <input
+            type="text"
+            id="orgName"
+            name="orgName"
+            placeholder="Enter organisation name"
+            required
+          />
+        </div>
 
-        <!-- Location -->
-        <label for="location">Location</label>
-        <input
-          type="text"
-          id="location"
-          name="location"
-          placeholder="Enter the location"
-          required
-        />
+        <div>
+          <label for="location">Location</label>
+          <input
+            type="text"
+            id="location"
+            name="location"
+            placeholder="Enter the location"
+            required
+          />
+        </div>
 
-        <!-- Number of Dustbins -->
-        <label for="binsRequired">No. of Dustbins Required</label>
-        <input
-          type="number"
-          id="binsRequired"
-          name="binsRequired"
-          placeholder="Enter number of dustbins"
-          required
-        />
+        <div>
+          <label for="binsRequired">No. of Dustbins Required</label>
+          <input
+            type="number"
+            id="binsRequired"
+            name="binsRequired"
+            placeholder="Enter number of dustbins"
+            required
+          />
+        </div>
 
-        <!-- Subscription Mode Selection -->
-        <label for="subscriptionType">Subscription Type</label>
-        <select id="subscriptionType" name="subscriptionType" required>
-          <option value="">Select Subscription Mode</option>
-          <option value="corporate">Corporate Use</option>
-          <option value="personal">Personal Use</option>
-        </select>
+        <div>
+          <label for="subscriptionType">Subscription Type</label>
+          <select id="subscriptionType" name="subscriptionType" required>
+            <option value="">Select Subscription Mode</option>
+            <option value="corporate">Corporate Use</option>
+            <option value="personal">Personal Use</option>
+          </select>
+        </div>
 
-        <!-- Pricing Information Section -->
         <div id="pricingCatalog" class="pricing-info">
           <h3>Pricing Catalog</h3>
           <p>Select a subscription type to view the pricing details:</p>
 
-          <!-- Corporate Pricing -->
-          <div
-            id="corporatePricing"
-            class="pricing-details"
-            style="display: none"
-          >
+          <div id="corporatePricing" class="pricing-details" style="display: none">
             <h4>Corporate Pricing:</h4>
             <ul>
               <li>Basic Package (up to 10 bins): 100rs/month</li>
@@ -78,12 +210,7 @@
             </ul>
           </div>
 
-          <!-- Personal Pricing -->
-          <div
-            id="personalPricing"
-            class="pricing-details"
-            style="display: none"
-          >
+          <div id="personalPricing" class="pricing-details" style="display: none">
             <h4>Personal Pricing:</h4>
             <ul>
               <li>Basic Package (1 bin): 15rs/month</li>
@@ -93,13 +220,11 @@
           </div>
         </div>
 
-        <!-- Submit Button -->
         <input type="submit" value="Submit Request" />
       </form>
     </div>
 
     <script>
-      // JavaScript to show pricing information based on subscription type
       const subscriptionType = document.getElementById("subscriptionType");
       const corporatePricing = document.getElementById("corporatePricing");
       const personalPricing = document.getElementById("personalPricing");
