--- a/user.html
+++ b/user.html
@@ -18,10 +18,10 @@
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="about_form.html">Product & Services</a></li>
             <li><a href="#portfolio">Gallery</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="">Staff Login</a></li>
+            <li><a href="about_form.html">Product & Services</a></li>
+            <li><a href="worker-tasks.html">Worker Login</a></li>
             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
           </ul>
           <i class="fa-solid fa-ellipsis-vertical" onclick="openmenu()"></i>
